# traffick-light-test

./: .env.example  .env.example.local  .gitattributes  .pre-commit-config.yaml  Makefile  README.md  build.sh  docker-compose-local.yml  docker-compose-staging.yml  lefthook.yml  render.yaml  start.sh  traffick-light.code-workspace
.devcontainer/: devcontainer.json
.docker/dev/app/: Dockerfile  entrypoint.sh
.docker/dev/nginx/: Dockerfile  nginx.conf
backend/: pyproject.toml  requirements.txt
backend/org/: asgi.py  routing.py  settings.py  urls.py
backend/org/core/: apps.py
backend/org/core/migrations/: 0001_enable_ltree.py
backend/org/employers/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
backend/org/employers/management/commands/: generate_test_data.py
backend/org/employers/migrations/: 0001_initial.py
backend/org/employers/templates/employers/: department_node.html  department_tree.html  employees_list.html
backend/org/entrypoints/admin/: settings.py  urls.py  wsgi.py
backend/org/entrypoints/main/: settings.py  urls.py  wsgi.py
