[project]
name = "traffick-light-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "channels-redis>=4.3.0",
    "channels[daphne]>=4.3.2",
    "daphne>=4.2.1",
    "django==5.2.8",
    "django-environ>=0.12.0",
    "django-ltree-field>=0.1.7",
    "django-redis>=6.0.0",
    "django-structlog>=10.0.0",
    "dotenv>=0.9.9",
    "gunicorn>=23.0.0",
    "pre-commit>=4.5.1",
    "psycopg2>=2.9.11",
    "redis>=7.1.0",
    "sentry-sdk>=2.48.0",
    "structlog>=25.5.0",
]
